CSSing the letterspacing fix

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -228,12 +228,17 @@ p {
       padding: 0px;
       color: $blue;
     }
+    h4 {
+      color: $pink;
+      margin-bottom: 0px;
+    }
     .bierdisplay {
       display: flex;
       h3 {
         margin-right: 10px;
         font-size: 18px;
         letter-spacing: 2px;
+        margin-top: 10px;
       }
       .display-true {
         color: $pink;
